--- a/public/login.html
+++ b/public/login.html
@@ -20,16 +20,17 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Login</a>
+        <a class="nav-item nav-link" href="login.html">Login</a>
         <a class="nav-item nav-link" href="registration.html">Registration</a>
-        <a class="nav-item nav-link" href="vehicleRequests.html">Requests</a>
-        <a class="nav-item nav-link active" href="addVehicle.html">Add Vehicle</a>
+        <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
+        <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
         <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Options
   </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="settings.html">Settings</a>
+            <a class="dropdown-item" href="vehicleRequests.html">My Requests</a>
             <button class="dropdown-item" onclick="modApp.logout()">Logout</button>
           </div>
         </div>
