--- a/public/registration.html
+++ b/public/registration.html
@@ -14,22 +14,23 @@
 
 <body>
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">CTS-Verification</a>
+    <a class="navbar-brand" href="index.html">CTS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="login.html">Login</a>
-        <a class="nav-item nav-link active" href="#">Registration</a>
-        <a class="nav-item nav-link" href="vehicleRequests.html">Requests</a>
-        <a class="nav-item nav-link active" href="addVehicle.html">Add Vehicle</a>
+        <a class="nav-item nav-link" href="registration.html">Registration</a>
+        <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
+        <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
         <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Options
   </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="settings.html">Settings</a>
+            <a class="dropdown-item" href="vehicleRequests.html">My Requests</a>
             <button class="dropdown-item" onclick="modApp.logout()">Logout</button>
           </div>
         </div>
