Retrieve current wallet balance

--- a/public/addVehicle.html
+++ b/public/addVehicle.html
@@ -57,7 +57,7 @@
         </div>
         <div class="form-group">
           <br>
-          <button type="submit" class="btn btn-outline-dark btn-large col-12">Submit</button>
+          <button type="submit" class="btn btn-outline-dark btn-large col-12">Add Request</button>
         </div>
 
       </form>
