Displaying all vehicles

--- a/public/addVehicle.html
+++ b/public/addVehicle.html
@@ -64,8 +64,24 @@
 
       <br>
       <h4 class="font-weight-bold mt-3">Your Vehicles</h4>
-      <div id="listAllVehicles">
+      <div>
+        <div class="row justify-content-start">
+          <table class="table table-hover table-bordered">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Vehicle VIN</th>
+                <th scope="col">Vehicle Class</th>
+                <!-- <th scope="col">Submitted by</th>
+                <th scope="col">Accept</th>
+                <th scope="col">Reject</th> -->
+              </tr>
+            </thead>
+            <tbody id="listAllVehicles">
 
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
