--- a/public/addVehicle.html
+++ b/public/addVehicle.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div class="loader" id="loader"></div>
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">CTS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +39,7 @@
     </div>
   </nav>
   <div class="container-fluid">
+
     <div class="container">
       <h4 class="font-weight-bold mt-3">Add a vehicle</h4>
       <form action="javascript: modAddVehicle.addAVehicle()" id="addVehicleForm">
