--- a/public/addVehicle.html
+++ b/public/addVehicle.html
@@ -25,16 +25,17 @@
         <a class="nav-item nav-link" href="registration.html">Registration</a>
         <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
         <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
+        <a class="nav-item nav-link" href="vehicleRequests.html">My Requests</a>
         <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Options
   </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="settings.html">Settings</a>
-            <a class="dropdown-item" href="vehicleRequests.html">My Requests</a>
             <button class="dropdown-item" onclick="modApp.logout()">Logout</button>
           </div>
         </div>
+        <!-- <a class="nav-item nav-link disabled" href="#">Disabled</a> -->
       </div>
     </div>
   </nav>
