Added number plate to existing flow

--- a/public/addVehicle.html
+++ b/public/addVehicle.html
@@ -46,7 +46,11 @@
       <form action="javascript: modAddVehicle.addAVehicle()" id="addVehicleForm">
         <div class="form-group">
           <label for="exampleFormControlInput1">VIN</label>
-          <input type="text" class="form-control" id="vin" name="vin" placeholder="qqwe-qwe-qwe-qew">
+          <input type="text" class="form-control" id="vin" name="vin" placeholder="XXXXXXXXXX">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput2">Number Plate</label>
+          <input type="text" class="form-control" id="numberPlate" name="numberPlate" placeholder="XXX-XXX">
         </div>
         <div class="form-group">
           <label for="exampleFormControlSelect1">Select vehicle class</label>
@@ -74,6 +78,7 @@
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">Vehicle VIN</th>
+                <th scope="col">Number Plate</th>
                 <th scope="col">Vehicle Class</th>
                 <!-- <th scope="col">Submitted by</th>
                 <th scope="col">Accept</th>
