--- a/public/vehicleRequests.html
+++ b/public/vehicleRequests.html
@@ -49,12 +49,13 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">Vehicle VIN</th>
+              <th scope="col">Number Plate</th>
               <th scope="col">Raised On</th>
               <th scope="col">Status</th>
             </tr>
           </thead>
           <tbody id="table_all_requests">
-<!--             <tr>
+            <!--             <tr>
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
