Nav bar active elements

--- a/public/vehicleRequests.html
+++ b/public/vehicleRequests.html
@@ -25,7 +25,7 @@
         <a class="nav-item nav-link" href="registration.html">Registration</a>
         <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
         <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
-        <a class="nav-item nav-link" href="vehicleRequests.html">My Requests</a>
+        <a class="nav-item nav-link active" href="vehicleRequests.html">My Requests</a>
         <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Options
