--- a/public/wallet.html
+++ b/public/wallet.html
@@ -23,7 +23,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="login.html">Login</a>
         <a class="nav-item nav-link" href="registration.html">Registration</a>
-        <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
+        <a class="nav-item nav-link active" href="wallet.html">My Wallet</a>
         <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
         <a class="nav-item nav-link" href="vehicleRequests.html">My Requests</a>
         <div class="nav-item dropdown">
