--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="login.html">Login</a>
+        <a class="nav-item nav-link active" href="login.html">Login</a>
         <a class="nav-item nav-link" href="registration.html">Registration</a>
         <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
         <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
