--- a/public/registration.html
+++ b/public/registration.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="login.html">Login</a>
-        <a class="nav-item nav-link" href="registration.html">Registration</a>
+        <a class="nav-item nav-link active" href="registration.html">Registration</a>
         <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
         <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
         <a class="nav-item nav-link" href="vehicleRequests.html">My Requests</a>
