undefined error in UI for tables

--- a/public/addVehicle.html
+++ b/public/addVehicle.html
@@ -89,6 +89,9 @@
 
             </tbody>
           </table>
+          <div id="emptyMessage">
+
+          </div>
         </div>
       </div>
     </div>
