--- a/public/vehicleRequests.html
+++ b/public/vehicleRequests.html
@@ -75,6 +75,9 @@
             </tr> -->
           </tbody>
         </table>
+        <div id="emptyMessage">
+
+        </div>
       </div>
     </div>
   </div>
