--- a/public/vehicleRequests.html
+++ b/public/vehicleRequests.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="css/app.css">
+  <script src="js/module_app.js"></script>
 
 </head>
 
@@ -21,8 +22,6 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="login.html">Login</a>
-        <a class="nav-item nav-link" href="registration.html">Registration</a>
         <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
         <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
         <a class="nav-item nav-link active" href="vehicleRequests.html">My Requests</a>
@@ -43,7 +42,7 @@
     <div class="container">
       <br>
       <div class="row justify-content-start">
-        <h5 class="font-weight-bold">Pending Requests</h5>
+        <h5 class="font-weight-bold">All Requests</h5>
         <table class="table table-hover table-bordered">
           <thead class="thead-light">
             <tr>
@@ -81,11 +80,15 @@
       </div>
     </div>
   </div>
-
+  <script>
+    if (constants.localStorage.getItem("isLoggedIn") == "false") {
+      window.location.href = "login.html";
+    }
+  </script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-  <script src="js/module_app.js"></script>
+
   <script src="js/module_vehicle_requests.js"></script>
 </body>
 
