--- a/public/settings.html
+++ b/public/settings.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="css/app.css">
-
+  <script src="js/module_app.js"></script>
 </head>
 
 <body>
@@ -21,8 +21,6 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="login.html">Login</a>
-        <a class="nav-item nav-link" href="registration.html">Registration</a>
         <a class="nav-item nav-link" href="wallet.html">My Wallet</a>
         <a class="nav-item nav-link" href="addVehicle.html">My Vehicles</a>
         <a class="nav-item nav-link" href="vehicleRequests.html">My Requests</a>
@@ -72,11 +70,14 @@
 
       </div>
     </div>
-
+    <script>
+      if (constants.localStorage.getItem("isLoggedIn") == "false") {
+        window.location.href = "login.html";
+      }
+    </script>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-    <script src="js/module_app.js"></script>
     <script src="js/module_settings.js"></script>
 </body>
 
