--- a/public/addVehicle.html
+++ b/public/addVehicle.html
@@ -95,7 +95,7 @@
     </div>
   </div>
   <script>
-    if (constants.localStorage.getItem("isLoggedIn") == "false") {
+    if (constants.localStorage.getItem("isLoggedIn") != "true") {
       window.location.href = "login.html";
     }
   </script>
