--- a/public/registration.html
+++ b/public/registration.html
@@ -52,10 +52,15 @@
       </form>
     </div>
   </div>
+  <script src="js/module_app.js"></script>
+  <script>
+    // if (constants.localStorage.getItem("isLoggedIn") == "true") {
+    //   window.location.href = "index.html";
+    // }
+  </script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-  <script src="js/module_app.js"></script>
   <script src="js/module_registration.js"></script>
 </body>
 
