--- a/public/vehicleRequests.html
+++ b/public/vehicleRequests.html
@@ -81,7 +81,7 @@
     </div>
   </div>
   <script>
-    if (constants.localStorage.getItem("isLoggedIn") == "false") {
+    if (constants.localStorage.getItem("isLoggedIn") != "true") {
       window.location.href = "login.html";
     }
   </script>
