--- a/public/wallet.html
+++ b/public/wallet.html
@@ -62,7 +62,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
   <script src="js/module_app.js"></script>
   <script>
-    if (constants.localStorage.getItem("isLoggedIn") == "false") {
+    if (constants.localStorage.getItem("isLoggedIn") != "true") {
       window.location.href = "login.html";
     }
   </script>
